--- a/src/renderer/assets/scss/_variables.scss
+++ b/src/renderer/assets/scss/_variables.scss
@@ -2,3 +2,5 @@
     $Secondarycolor: #ffffff;
     $Tertiarycolor: #807878;
     $Textcolor: #000000;
+    $Secondarytextcolor: #ffffff; 
+    $fa-font-path: "../webfonts";
