--- a/src/renderer/assets/scss/_variables.scss
+++ b/src/renderer/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 $Primarycolor: #000044;
 $Secondarycolor: #ffffff;
 $Tertiarycolor: #807878;
+$Warningcolor:rgb(212, 110, 27) ;
 $Textcolor: #000000;
 $Secondarytextcolor: #ffffff;
