added secondary 'already signed in' check to sign in

--- a/src/renderer/assets/fontawesome6/scss/fontawesome.scss
+++ b/src/renderer/assets/fontawesome6/scss/fontawesome.scss
@@ -11,11 +11,11 @@
 @import 'mixins';
 @import 'core';
 @import 'sizing';
-@import 'fixed-width';
-@import 'list';
-@import 'bordered-pulled';
-@import 'animated';
-@import 'rotated-flipped';
-@import 'stacked';
+//@import 'fixed-width';
+//@import 'list';
+//@import 'bordered-pulled';
+//@import 'animated';
+//@import 'rotated-flipped';
+//@import 'stacked';
 @import 'icons';
-@import 'screen-reader';
+//@import 'screen-reader';
